# icoutil

./: .gitignore  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/icoutil/: IcoFile.py  __init__.py  __main__.py
tests/: test_icoutil.py
